--- a/test/testcases/test-events.html
+++ b/test/testcases/test-events.html
@@ -46,11 +46,13 @@ function testTiming(animation, expectedEvents, testName) {
   registerAnimationEvents(animation);
   var player = document.timeline.play(animation);
 
-  test_at(15, function() { assertEventsMatch(animation, eventList, expectedEvents); }, testName);
+  timing_test(function() {
+    at(15, function() { assertEventsMatch(animation, eventList, expectedEvents); }, testName);
+  }, testName);
 }
 
-for (var i = 0; i < 12001; i += 3000) {
-  testharness_timeline.schedule(i, function() { });
+for (var i = 0; i < 13; i += 3) {
+  at(i, function() { console.log(document.timeline.currentTime)});
 }
 
 function assertEventsMatch(anim, events, expectations) {
@@ -107,7 +109,7 @@ function iterList(localStart, globalStart, iterStart, delta, count, targetFun) {
 function simple(timing) {
   return new Animation(target, {left: '100px'}, timing);
 }
-
+/*
 testTiming(simple(10),
   [event('start', 0, 0, 0), event('end', 10, 10, 0)],
   "simple animation");
@@ -183,6 +185,7 @@ testTiming(new ParGroup([simple({iterationDuration: 10, playbackRate: 4})],
   [event('start', 0, 0, 0), event('start', 0, 0, 0, child(0)),
    event('end', 2.5, 5, 0, child(0)), event('end', 5, 5, 0)],
    "nested non-unit playbackRates");
+*/
 
 testTiming(new ParGroup([simple({iterationCount: 2, iterationDuration: 2.5, 
                                  playbackRate: 4})],
