--- a/test/testcases/unit-test-null-effect.html
+++ b/test/testcases/unit-test-null-effect.html
@@ -20,8 +20,7 @@ limitations under the License.
 
 <div id="anim"></div>
 
-<script src="../testharness_bootstrap.js"></script>
-<script src="../../web-animations.js"></script>
+<script src="../bootstrap.js"></script>
 <script>
 "use strict";
 
