Fix test-pseudo-element-reference and update with new *awesome* syntax

--- a/test/testcases/test-pseudo-element-reference.html
+++ b/test/testcases/test-pseudo-element-reference.html
@@ -28,7 +28,7 @@ limitations under the License.
 var parent = document.querySelector('#parent');
 var child = document.querySelector('#parent');
 document.timeline.play(new Animation(
-    new PseudoElementReference(child, ':before'), {width: ['0px', '100px']}, 1));
+    new PseudoElementReference(child, ':before'), [{width: '0px'}, {width: '100px'}], 1));
 
 timing_test(function() {
   at(0.5, function() {
