--- a/test/testcases/test-events.html
+++ b/test/testcases/test-events.html
@@ -25,8 +25,7 @@ div.anim {
 }
 </style>
 <div class='anim'></div>
-<script src="../testharness_bootstrap.js"></script>
-<script src="../../web-animations.js"></script>
+<script src="../bootstrap.js"></script>
 <script>
 "use strict";
 var target = document.querySelector('.anim');
