--- a/demos/car-demo.html
+++ b/demos/car-demo.html
@@ -136,19 +136,28 @@
 
   var carAnimation = new SeqGroup([
     new ParGroup([
-      new Animation(document.querySelector("#redLight"), {"background-color": lightOff}, {iterationDuration: 0.5}),
-      new Animation(document.querySelector("#greenLight"), {"background-color": "green"}, {iterationDuration: 0.5}),
+      new Animation(document.querySelector("#redLight"),
+          {"background-color": lightOff}, {iterationDuration: 0.5}),
+      new Animation(document.querySelector("#greenLight"),
+          {"background-color": "green"}, {iterationDuration: 0.5}),
     ], {}),
-    new Animation(document.querySelector(".car"), {left: "100%"}, {iterationDuration: 3, timingFunction: "ease-in"}),
+    new Animation(document.querySelector(".car"), {left: "100%"},
+        {iterationDuration: 3, timingFunction: "ease-in"}),
     new ParGroup([
-      new Animation(document.querySelector("#greenLight"), {"background-color": lightOff}, {iterationDuration: 0.5}),
-      new Animation(document.querySelector("#orangeLight"), {"background-color": "rgb(255,165,0)"}, {iterationDuration: 0.5}),
+      new Animation(document.querySelector("#greenLight"),
+          {"background-color": lightOff}, {iterationDuration: 0.5}),
+      new Animation(document.querySelector("#orangeLight"),
+          {"background-color": "rgb(255,165,0)"}, {iterationDuration: 0.5}),
     ], {startDelay: 0.25}),
     new ParGroup([
-      new Animation(document.querySelector("#orangeLight"), {"background-color": lightOff}, {iterationDuration: 0.5}),
-      new Animation(document.querySelector("#redLight"), {"background-color": "red"}, {iterationDuration: 0.5}),
+      new Animation(document.querySelector("#orangeLight"),
+          {"background-color": lightOff}, {iterationDuration: 0.5}),
+      new Animation(document.querySelector("#redLight"),
+          {"background-color": "red"}, {iterationDuration: 0.5}),
     ], {startDelay: 0.25}),
-    new Animation(document.querySelector(".car"), {left: ["-500px", "10px"]}, {iterationDuration: 2, timingFunction: "ease-out"}),
+    new Animation(document.querySelector(".car"),
+        [{left: "-500px"}, {left: "10px"}],
+        {iterationDuration: 2, timingFunction: "ease-out"}),
   ]);
 
   document.querySelector("#buttonA").addEventListener('mousedown', function() {
