--- a/demos/demo_example.html
+++ b/demos/demo_example.html
@@ -121,7 +121,7 @@ var a = undefined;
 
 function first() {
   a = new Animation(document.querySelector(".doorSpacer"),
-    { '-webkit-transform': [ 'rotateY(0deg)', 'rotateY(100deg)' ] }, 2);
+    { 'transform': [ 'rotateY(0deg)', 'rotateY(100deg)' ] }, 2);
 }
 
 function second() {
@@ -148,7 +148,7 @@ var pictureTilting = undefined;
 function fifth() {
   var picture = document.querySelector(".picture");
   pictureTilting = new Animation(picture,
-      { '-webkit-transform': [ 'rotate(0deg)', 'rotate(-30deg)' ] }, 0.5);
+      { 'transform': [ 'rotate(0deg)', 'rotate(-30deg)' ] }, 0.5);
   group = new SeqGroup([a, pictureTilting]);
 }
 
