--- a/demos/test-circle-square.html
+++ b/demos/test-circle-square.html
@@ -103,8 +103,8 @@ limitations under the License.
       document.timeline.play(new ParGroup([blueBallMove, redBallMove]));
 
       var transformGroup = new ParGroup([]);
-      new Animation(document.querySelector("#blockA"), {"-webkit-transform": ["translate(0px, 0px) rotate(0deg)", "translate(-450px, 0px) rotate(180deg)"]} , 4, transformGroup);
-      new Animation(document.querySelector("#blockB"), {"-webkit-transform": ["translate(0px, 0px) rotate(0deg)", "translate(450px, 0px) rotate(270deg)"]} , 4, transformGroup);
+      new Animation(document.querySelector("#blockA"), {"transform": ["translate(0px, 0px) rotate(0deg)", "translate(-450px, 0px) rotate(180deg)"]} , 4, transformGroup);
+      new Animation(document.querySelector("#blockB"), {"transform": ["translate(0px, 0px) rotate(0deg)", "translate(450px, 0px) rotate(270deg)"]} , 4, transformGroup);
       document.timeline.play(transformGroup);
     </script>
   </body>
