--- a/demos/test-circle-square.html
+++ b/demos/test-circle-square.html
@@ -90,21 +90,23 @@ limitations under the License.
       var around5 = new Animation(document.querySelector("#a"), {top: "0px"}, {startDelay: 6, duration: 2});
       var blueBallMove = new ParGroup([around1, around2, around3, around4, around5], {iterationCount: 2, direction: "alternate", duration: 8});
 
-      var redBallMove = new SeqGroup([], {duration: 16});
-      new Animation(document.querySelector("#b"), {top: "0px", left: "0px"}, 2, redBallMove);
-      new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2, redBallMove);
-      new Animation(document.querySelector("#b"), {top: "0px", left: "450px"}, 2, redBallMove);
-      new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2, redBallMove);
-      new Animation(document.querySelector("#b"), {top: "250px", left: "450px"}, 2, redBallMove);
-      new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2, redBallMove);
-      new Animation(document.querySelector("#b"), {top: "250px", left: "0px"}, 2, redBallMove);
-      new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2, redBallMove);
+      var redBallMove = new SeqGroup([
+        new Animation(document.querySelector("#b"), {top: "0px", left: "0px"}, 2),
+        new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2),
+        new Animation(document.querySelector("#b"), {top: "0px", left: "450px"}, 2),
+        new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2),
+        new Animation(document.querySelector("#b"), {top: "250px", left: "450px"}, 2),
+        new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2),
+        new Animation(document.querySelector("#b"), {top: "250px", left: "0px"}, 2),
+        new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2),
+      ], {duration: 16});
 
       document.timeline.play(new ParGroup([blueBallMove, redBallMove]));
 
-      var transformGroup = new ParGroup([]);
-      new Animation(document.querySelector("#blockA"), {"transform": ["translate(0px, 0px) rotate(0deg)", "translate(-450px, 0px) rotate(180deg)"]} , 4, transformGroup);
-      new Animation(document.querySelector("#blockB"), {"transform": ["translate(0px, 0px) rotate(0deg)", "translate(450px, 0px) rotate(270deg)"]} , 4, transformGroup);
+      var transformGroup = new ParGroup([
+        new Animation(document.querySelector("#blockA"), {"transform": ["translate(0px, 0px) rotate(0deg)", "translate(-450px, 0px) rotate(180deg)"]} , 4),
+        new Animation(document.querySelector("#blockB"), {"transform": ["translate(0px, 0px) rotate(0deg)", "translate(450px, 0px) rotate(270deg)"]} , 4),
+      ]);
       document.timeline.play(transformGroup);
     </script>
   </body>
