Fix script references in test-null-target

--- a/test/testcases/test-null-target.html
+++ b/test/testcases/test-null-target.html
@@ -28,8 +28,7 @@ limitations under the License.
     }
 </style>
 <div class="anim" id="a"></div>
-<script src="../testharness_bootstrap.js"></script>
-<script src="../../web-animations.js"></script>
+<script src="../bootstrap.js"></script>
 <script>
   "use strict";
   var across = new Animation(document.querySelector("#a"), {left: "450px"}, 0.2);
