--- a/test/testcases/test-null-target.html
+++ b/test/testcases/test-null-target.html
@@ -28,7 +28,7 @@ limitations under the License.
     }
 </style>
 <div class="anim" id="a"></div>
-<script src="../bootstrap.js"></script>
+<script src="../bootstrap.js" nochecks></script>
 <script>
   "use strict";
   var across = new Animation(document.querySelector("#a"), {left: "450px"}, 0.2);
