--- a/test/testcases/impl-test-player-sees-handlers.html
+++ b/test/testcases/impl-test-player-sees-handlers.html
@@ -16,7 +16,7 @@ limitations under the License.
 
 <!DOCTYPE html>
 <body></body>
-<script src="../bootstrap.js"></script>
+<script src="../bootstrap.js" nochecks></script>
 <script>
 "use strict";
 
