--- a/test/testcases/unit-test-dom-operations.html
+++ b/test/testcases/unit-test-dom-operations.html
@@ -29,7 +29,7 @@ function initGroup() {
 }
 
 function toOrdering(list) {
-  return list.map(function(animation) { return animation.specified.iterationDuration; });
+  return [].map.call(list, function(animation) { return animation.specified.iterationDuration; });
 }
 
 function assert_child_order(group, list, message) {
