--- a/test/testcases/test-media.html
+++ b/test/testcases/test-media.html
@@ -106,6 +106,10 @@ https://code.google.com/p/chromium/issues/detail?id=121765.
     <source src="http://web-animations.github.io/web-animations-js/test/testcases/small.webm" type="video/webm">
     <source src="http://web-animations.github.io/web-animations-js/test/testcases/small.mp4" type="video/mp4">
   </video>
+  <video preload="auto">
+    <source src="http://web-animations.github.io/web-animations-js/test/testcases/small.webm" type="video/webm">
+    <source src="http://web-animations.github.io/web-animations-js/test/testcases/small.mp4" type="video/mp4">
+  </video>
 </div>
   
 <script src="../bootstrap.js" nochecks></script>
@@ -409,5 +413,22 @@ timing_test(function() {
 
 // Test limited seek ranges.
 // TODO: Need to find a video with limited seek ranges.
+
+// Test that video is paused when its MediaReference is detached from its
+// Player.
+timing_test(function() {
+  var video = getNextVideo();
+  var player;
+  at(0.0, function() {
+    player = dt.play(createTestMediaReference(video));
+  });
+  at(1.0, function() {
+    assert_false(video.paused);
+    player.source = null;
+  });
+  at(2.0, function() {
+    assert_true(video.paused);
+  });
+}, "Video should be paused when MediaReference is detached from its Player");
 
 </script>
