--- a/test/testcases/test-path.html
+++ b/test/testcases/test-path.html
@@ -16,7 +16,7 @@ limitations under the License.
 
 <!DOCTYPE html>
 <style>
-#anim1, #anim2 {
+.animation {
   position: absolute;
   width: 25px;
   height: 25px;
@@ -33,12 +33,12 @@ limitations under the License.
   left: 0px;
 }
 #e1 {
-  transform: translate(87.5px, 87.5px);
   -webkit-transform: translate(87.5px, 87.5px);
+  transform: translate(87.5px, 87.5px);
 }
 #e2 {
-  transform: translate(87.5px, 237.5px) rotate(63.33deg);
-  -webkit-transform: translate(87.5px, 237.5px) rotate(63.33deg);
+  -webkit-transform: translate(87.5px, 287.5px);
+  transform: translate(87.5px, 287.5px);
 }
 svg {
 position:absolute;
@@ -52,25 +52,25 @@ height: 500px;
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
   <path id=path1 d="M 100,100 a 75,75 0 1,0 150,0 a 75,75 0 1,0 -150,0 "
       stroke="black" stroke-width="1" fill="none" />
-  <path id=path2 d="M 100 250 L 300 250 L 200 450 z" stroke="black"
+  <path id=path2 d="M100,300l0,-50l100,0l86.3325,122.665z" stroke="black"
       stroke-width="1" fill="none" />
 </svg>
 
 <div id="e1" class="expectation"></div>
-<div id="anim1">&rarr;</div>
+<div id="anim1" class="animation">&rarr;</div>
 <div id="e2" class="expectation"></div>
-<div id="anim2">&rarr;</div>
+<div id="anim2" class="animation">&rarr;</div>
 
 
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
 
-var animFunc = new PathAnimationEffect(
+var animFunc1 = new PathAnimationEffect(
     document.querySelector('#path1').pathSegList, 'auto-rotate');
 
 document.timeline.play(new Animation(document.querySelector("#anim1"),
-    animFunc, {iterationDuration: 2, iterationCount: 2}));
+    animFunc1, {iterationDuration: 2, iterationCount: 2}));
 
 var animFunc2 = new PathAnimationEffect(
     document.querySelector('#path2').pathSegList, 'auto-rotate');
