--- a/test/testcases/test-path.html
+++ b/test/testcases/test-path.html
@@ -40,6 +40,10 @@ limitations under the License.
   -webkit-transform: translate(87.5px, 287.5px);
   transform: translate(87.5px, 287.5px);
 }
+#e3 {
+  -webkit-transform: translate(287.5px, 287.5px);
+  transform: translate(87.5px, 287.5px);
+}
 svg {
 position:absolute;
 top: 0px;
@@ -50,9 +54,14 @@ height: 500px;
 </style>
 
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-  <path id=path1 d="M 100,100 a 75,75 0 1,0 150,0 a 75,75 0 1,0 -150,0 "
+  <path id=path1 d="M 100,100 a 75,75 0 1,0 150,0 a 75,75 0 1,0 -150,0 " />
+  <path d="M 100,100 a 75,75 0 1,0 150,0 a 75,75 0 1,0 -150,0 "
       stroke="black" stroke-width="1" fill="none" />
-  <path id=path2 d="M100,300l0,-50l100,0l86.3325,122.665z" stroke="black"
+  <path id=path2 d="M100,300l0,-50l100,0l86.3325,122.665z" />
+  <path d="M100,300l0,-50l100,0l86.3325,122.665z" stroke="black"
+      stroke-width="1" fill="none" />
+  <path id=path3 d="M300,300l0,-50l100,0l86.3325,122.665z" />
+  <path d="M300,300l0,-50l100,0l86.3325,122.665z" stroke="black"
       stroke-width="1" fill="none" />
 </svg>
 
@@ -60,6 +69,8 @@ height: 500px;
 <div id="anim1" class="animation">&rarr;</div>
 <div id="e2" class="expectation"></div>
 <div id="anim2" class="animation">&rarr;</div>
+<div id="e3" class="expectation"></div>
+<div id="anim3" class="animation">&rarr;</div>
 
 
 <script src="../bootstrap.js"></script>
@@ -68,13 +79,16 @@ height: 500px;
 
 var animFunc1 = new PathAnimationEffect(
     document.querySelector('#path1').pathSegList, 'auto-rotate');
-
 document.timeline.play(new Animation(document.querySelector("#anim1"),
-    animFunc1, {iterationDuration: 2, iterationCount: 2}));
+    animFunc1, {iterationDuration: 10, iterationCount: 2}));
 
 var animFunc2 = new PathAnimationEffect(
     document.querySelector('#path2').pathSegList, 'auto-rotate');
-
 document.timeline.play(new Animation(document.querySelector("#anim2"),
-    animFunc2, {iterationDuration: 2, iterationCount: 2}));
+    animFunc2, {iterationDuration: 10, iterationCount: 2}));
+
+var animFunc3 = new PathAnimationEffect(
+    document.querySelector('#path3').pathSegList, 'auto-rotate');
+document.timeline.play(new Animation(document.querySelector("#anim3"),
+    animFunc3, {iterationDuration: 10, iterationCount: 2, timingFunction: "paced"}));
 </script>
