--- a/test/testcases/test-path.html
+++ b/test/testcases/test-path.html
@@ -37,19 +37,23 @@ limitations under the License.
   transform: translate(87.5px, 87.5px);
 }
 #e2 {
+  -webkit-transform: translate(387.5px, 87.5px);
+  transform: translate(387.5px, 87.5px);
+}
+#e3 {
   -webkit-transform: translate(87.5px, 287.5px);
   transform: translate(87.5px, 287.5px);
 }
-#e3 {
-  -webkit-transform: translate(287.5px, 287.5px);
-  transform: translate(87.5px, 287.5px);
+#e4, #anim4 {
+  -webkit-transform: translate(387.5px, 287.5px);
+  transform: translate(387.5px, 287.5px);
 }
 svg {
 position:absolute;
 top: 0px;
 left: 0px;
-width: 500px;
-height: 500px;
+width: 800px;
+height: 600px;
 }
 </style>
 
@@ -57,11 +61,14 @@ height: 500px;
   <path id=path1 d="M 100,100 a 75,75 0 1,0 150,0 a 75,75 0 1,0 -150,0 " />
   <path d="M 100,100 a 75,75 0 1,0 150,0 a 75,75 0 1,0 -150,0 "
       stroke="black" stroke-width="1" fill="none" />
-  <path id=path2 d="M100,300l0,-50l100,0l86.3325,122.665z" />
+  <path id=path2 d="M400,100l0,-50l100,0l86.3325,122.665z" />
+  <path d="M400,100l0,-50l100,0l86.3325,122.665z" stroke="black"
+      stroke-width="1" fill="none" />
+  <path id=path3 d="M100,300l0,-50l100,0l86.3325,122.665z" />
   <path d="M100,300l0,-50l100,0l86.3325,122.665z" stroke="black"
       stroke-width="1" fill="none" />
-  <path id=path3 d="M300,300l0,-50l100,0l86.3325,122.665z" />
-  <path d="M300,300l0,-50l100,0l86.3325,122.665z" stroke="black"
+  <path id=path4 d="M400,300l0,-50l100,0l86.3325,122.665z" />
+  <path d="M400,300l0,-50l100,0l86.3325,122.665z" stroke="black"
       stroke-width="1" fill="none" />
 </svg>
 
@@ -71,9 +78,12 @@ height: 500px;
 <div id="anim2" class="animation">&rarr;</div>
 <div id="e3" class="expectation"></div>
 <div id="anim3" class="animation">&rarr;</div>
+<div id="e4" class="expectation"></div>
+<div id="anim4" class="animation">&rarr;</div>
 
 
-<script src="../bootstrap.js"></script>
+<script src="../../web-animations.js"></script>
+<!-- <script src="../bootstrap.js"></script> -->
 <script>
 "use strict";
 
@@ -89,6 +99,25 @@ document.timeline.play(new Animation(document.querySelector("#anim2"),
 
 var animFunc3 = new PathAnimationEffect(
     document.querySelector('#path3').pathSegList, 'auto-rotate');
-document.timeline.play(new Animation(document.querySelector("#anim3"),
-    animFunc3, {iterationDuration: 10, iterationCount: 2, timingFunction: "paced"}));
+document.timeline.play(new Animation(
+    document.querySelector("#anim3"), animFunc3,
+    {iterationDuration: 10, iterationCount: 2, timingFunction: "paced"}));
+
+var animFunc4KeyFrames = new KeyframeAnimationEffect(
+    [{transform: "translate(387.5px, 287.5px) rotate(180deg)"}], "replace");
+var animFunc4Path = new PathAnimationEffect(
+    document.querySelector('#path4').pathSegList, 'auto-rotate');
+var anim4 = new Animation(document.querySelector("#anim4"), animFunc4Path,
+    {iterationDuration: 10, iterationCount: 2, timingFunction: "paced"});
+document.timeline.play(anim4);
+function timing_test(f) {f();}
+function at(t,f) {setTimeout(f,t*1000);}
+timing_test(function() {
+  at(10, function() {
+    anim4.effect = animFunc4KeyFrames;
+  });
+  at(15, function() {
+    anim4.effect = animFunc4Path;
+  });
+}, "Modify effect on paced animation");
 </script>
