Making the "explore" mode the default.

--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -167,7 +167,7 @@ function createTestRows(testName, testURL) {
 
   // iframe containing a preview of object
   var iframe = document.createElement('iframe');
-  iframe.src = testURL + '#start=message';
+  iframe.src = testURL + '#message';
 
   var iframeCell = document.createElement('td');
   iframeCell.colSpan = '4';
